<resources>
    <string name="app_name">mappe1</string>
    <string name="start_spill">Start Spill</string>
    <string name="se_statistikk">Se Statistikk</string>
    <string name="preferanser">Preferanser</string>
    <string name="forklaring">Ditt Svar:</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="delete">fjern</string>
    <string name="enter">Enter</string>
    <string name="norsk">Norsk</string>
    <string name="tysk">Tysk</string>
    <string name="bekreftelse">Bekreft Handling</string>
    <string name="avslutteSpill">Vil du virkelig Avslutte?</string>
    <string name="nei">nei</string>
    <string name="ja">ja</string>
    <string name="spillFerdig">Spillet Er Ferdig!</string>
    <string name="spillFerdigMelding1">Det ikke er flere tilgjengelige spørsmål! Du hadde </string>
    <string name="spillFerdigMelding2"> riktige og </string>
    <string name="spillFerdigMelding3"> feil svar! </string>
    <string name="avslutt">Tilbake</string>
    <string name="correct_total_key">antall_rikitge_key</string>
    <string name="incorrect_total_key">Incorrect Answers Total</string>
    <string name="Feil">Feil</string>
    <string name="riktige">Riktige</string>
    <string name="statistikk">Statistikk</string>
    <string name="choose_Language">Velg Språk:</string>
    <string name="correct_total">Riktige Til Sammen:</string>
    <string name="incorrect_total">Feil Til Sammen:</string>
    <string name="preference_file_key">s325854.mappe1.preferences</string>
    <string name="game_length_key">Spill lengde key</string>
    <string name="number25">25</string>
    <string name="SpillLengde">Spill Lengde:</string>
    <string name="number10">10</string>
</resources>
