<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/text_statisticsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistikk"
        android:theme="@style/TextViewTitle"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        tools:layout_editor_absoluteX="168dp" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        tools:layout_editor_absoluteX="168dp" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="129dp">

        <TextView
            android:id="@+id/text_correctStatistic"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:text="@string/correct_total"
            android:theme="@style/TextViewCorreStyle"
            android:layout_marginStart="100dp" />

        <TextView
            android:id="@+id/text_correctStatisticNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:theme="@style/TextViewCorreStyle"
            android:layout_marginStart="16dp"  />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="129dp">

        <TextView
            android:id="@+id/text_incorrectStatistic"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_total"
            android:theme="@style/TextViewIncorrectStyle"
            android:layout_marginStart="100dp" />

        <TextView
            android:id="@+id/text_incorrectStatisticNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:theme="@style/TextViewIncorrectStyle"
            android:layout_marginStart="16dp"  />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>